# ChangeLog for media-libs/mediastreamer
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/mediastreamer/ChangeLog,v 1.75 2014/01/18 10:32:07 hwoarang Exp $

  10 Apr 2015; Guillaume Horel <guillaume.horel@gmail.com>
  +files/mediastreamer-2.11.1-fix-tools.patch, mediastreamer-2.11.1.ebuild:
  media-libs/mediastreamer: media-libs/mediastreamer fix tools compilation

  10 Apr 2015; Guillaume Horel <guillaume.horel@gmail.com>
  mediastreamer-2.11.1.ebuild, metadata.xml:
  media-libs/mediastreamer: cleanup use flags

  18 Jan 2014; Markos Chandras <hwoarang@gentoo.org> mediastreamer-2.9.0.ebuild:
  Bump ortp dependency to 0.21.0. Bug #494766

  27 Oct 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Voip herd is removed: http://article.gmane.org/gmane.linux.gentoo.devel/88434

  11 Oct 2013; Julian Ospald <hasufell@gentoo.org> mediastreamer-2.9.0.ebuild,
  +files/mediastreamer-2.9.0-xxd.patch:
  fix opengl useflag wrt #487486

  10 Oct 2013; Julian Ospald <hasufell@gentoo.org> mediastreamer-2.9.0.ebuild:
  add opengl useflag, add subslot

  09 Oct 2013; Julian Ospald <hasufell@gentoo.org> mediastreamer-2.9.0.ebuild,
  +files/mediastreamer-2.9.0-tests.patch:
  fix tests

*mediastreamer-2.9.0 (09 Oct 2013)

  09 Oct 2013; Julian Ospald <hasufell@gentoo.org> +mediastreamer-2.9.0.ebuild,
  +files/mediastreamer-2.9.0-libav9.patch,
  +files/mediastreamer-2.9.0-underlinking.patch,
  +files/mediastreamer-2.9.0-v4l-automagic.patch, metadata.xml:
  version bump wrt #486500

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> mediastreamer-2.8.2.ebuild:
  Stable for ppc64, wrt bug #464536

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> mediastreamer-2.8.2.ebuild:
  Stable for ppc, wrt bug #464536

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> mediastreamer-2.8.2.ebuild:
  Stable for amd64, wrt bug #464536

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> mediastreamer-2.8.2.ebuild: