@@ -1,3 +1,3 @@
 DIST mediastreamer-2.10.0.tar.gz 3604794 SHA256 808d87c47b7e4c79698765894cbde74575011059b33a76280aa567f099dce1ea SHA512 d7db01c6c5acb563c9787438620c8b74dd21f47e4be5f6dfa5c138d752b70194e5dbcc51daaea4eab8e775298b50f1d253237eff4cae2c213afc55318cf56577 WHIRLPOOL b0aa4b8bed74946b58adf2f03fccf4c7919c89a7ae2bd6d1f48e2332cf3c5b1c0d6abce70407a9bcf5c7779a611b1906adf4870358515d9242af355b052b68d3
-DIST mediastreamer-2.11.1.tar.gz 6347710 SHA256 eda29f98f8fa73f9a7da48e3ab00e1d3015b6bcffac98e06c27e7b9dc524db3d SHA512 72e7b80341aef8ddb35d482077429e9b498bd2c576136da16a5994265f9a20fbbd27b0880581527df965448f30f6f72e2a35d4ff00b0ae85ab012e9601b37ec9 WHIRLPOOL b9e29c226b816bfee7af552faa40b8edc0e1d720fea6472d8eb7e9a49a011a838f6ad250267241ad4948eae39c6c6f0db5f2d6db20015eb85c57f8f3566275d2
+DIST mediastreamer-2.11.2.tar.gz 9736766 SHA256 24d76d255f6c3193e078481cf3ea4891aa175b98ab1ff078e9298fc099456d37 SHA512 238113054e65ed097f81352fc2c8b03dfd51d2db08bcf0384cf52ec408dcc5b4a9e7dd417e9e74dc85707350b5438feb5f85b38318e74ee43ad276e3aa4e7831 WHIRLPOOL 33f8e2499f1368a2fa4538c1a870cc60ae9d8e53cb0f7c79feaccbab49e814aaabd364532592ed1635181491563b0b8b4d9e37952f026b52331bf78c96a62838
 DIST mediastreamer-2.9.0.tar.gz 3578877 SHA256 c245b9444c2abb4c84433606e01f0b3ce29ce78de0afe1e191f4f3c62656acd5 SHA512 8c31ab07c659dce84c410dfb5814b6cdf3defcd4055814922f58e2886bfeecfd5bab294c408858a29e72fcf53f35a1f7748113e1f2863baa329daedae07ef2f0 WHIRLPOOL 9e425ff2e461ceb6dae3890e6bd8035de65f5b3fd0590e01b75259c0d27dd54cfd37cb88d43752c2903c954ac44e353e4ed63588d3f08ec690da77293a31ba68
