@@ -2,6 +2,17 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-libs/mediastreamer/ChangeLog,v 1.75 2014/01/18 10:32:07 hwoarang Exp $
 
+*mediastreamer-2.11.2 (11 May 2015)
+
+  11 May 2015; Guillaume Horel <guillaume.horel@gmail.com>
+  +files/mediastreamer-2.11.2-fix-tools.patch,
+  +files/mediastreamer-2.11.2-tests.patch,
+  +files/mediastreamer-2.11.2-v4l-automagic.patch, +mediastreamer-2.11.2.ebuild,
+  -files/mediastreamer-2.11.1-fix-tools.patch,
+  -files/mediastreamer-2.11.1-tests.patch,
+  -files/mediastreamer-2.11.1-v4l-automagic.patch, -mediastreamer-2.11.1.ebuild:
+  media-libs/mediastreamer: version bump
+
   10 Apr 2015; Guillaume Horel <guillaume.horel@gmail.com>
   +files/mediastreamer-2.11.1-fix-tools.patch, mediastreamer-2.11.1.ebuild:
   media-libs/mediastreamer: media-libs/mediastreamer fix tools compilation
